Formatting and getLabPlanStatusCounts